--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ sled = "0.34.4"
 indexmap = "1.6.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+uuid = { version = "0.8", features = ["v4"] }
 
 
 [dependencies.rocket_contrib]
