--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 rocket = "0.4.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+# dino = { path = "C:\\Users\\user\\Desktop\\Andy\\Rust\\dino" }
 dino = { git = "https://github.com/Andy-Python-Programmer/dino" }
 uuid = { version = "0.8", features = ["v4"] }
 
