--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 rocket = "0.4.5"
 serde_json = "1.0.59"
-dotenv_codegen = "0.15.0"
+dotenv = "0.15.0"
 futures = "0.3"
 
 [dependencies.rocket_contrib]
