--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ rocket = "0.4.5"
 serde_json = "1.0.59"
 dotenv = "0.15.0"
 futures = "0.3"
+serde = "1.0.117"
 
 [dependencies.rocket_contrib]
 version = "0.4.5"
