--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0.59"
 dotenv = "0.15.0"
 futures = "0.3"
 serde = "1.0.117"
+indexmap = { version = "1.6.0", features = ["serde-1"] }
 
 [dependencies.rocket_contrib]
 version = "0.4.5"
